# ni-rs

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: detect.rs  main.rs
src/utils/: args.rs  config.rs  detect.rs  mod.rs  print.rs
