[package]
name = "ni-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
ini = "1.3.0"
path-absolutize = "3.0.14"
prompts = "0.1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }


[lib]
path="src/lib.rs"
